# tibco-ems-sys-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: send_text_message.rs
src/: lib.rs
